# everest

./: .gitignore  .prettierignore  AGENTS.md  README.md  components.json  electron-builder.win.yml  electron-builder.yml  eslint.config.js  forge.config.ts  package.json  prettier.config.js  svelte.config.js  tsconfig.electron.json  vite.config.ts  vitest.config.ts
.claude/: skills
.github/workflows/: build-desktop-binaries.yml  release.yml
.rwx/: release.yml
electron/: main.ts  preload.cts  rdl.ts
scripts/: build-rdl-parser-sidecar.ts  rdl_parser.py
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: desktop-api.ts  electron.ts  tauri.test.ts  tauri.ts  utils.ts
src/lib/components/app/: AppHotkeys.svelte  AppMenubar.svelte  BitLayout.svelte  DiagnosticLogsDialog.svelte  EditorBreadcrumbs.svelte  EditorShell.svelte  EnumEditor.svelte  FieldCard.svelte  (+13 more)
src/lib/effect/: app-status.ts  desktop.test.ts  desktop.ts  diagnostics.test.ts  diagnostics.ts  document-commands.test.ts  document-commands.ts  run.ts
src/lib/rdl/: bit-layout.ts  domain.test.ts  export.ts  format.ts  hierarchy.ts  model.ts  mutations.ts  normalize.ts  schema.ts  search.test.ts  search.ts  source-edits.test.ts  source-edits.ts  validation.ts
src/lib/state/: diagnostics.svelte.ts  editor.svelte.test.ts  editor.svelte.ts  session-persistence.test.ts  session-persistence.ts  ui.svelte.test.ts  ui.svelte.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
(+155 files in other folders)
