[package]
name = "basecamp"
version = "0.0.1"
description = "SystemRDL desktop editor"
authors = ["Lawjay Lee"]
edition = "2021"

[lib]
name = "basecamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "basecamp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.7.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
